--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,8 +23,12 @@
     "vscode": {
       "extensions": ["vscjava.vscode-java-pack", "GitHub.copilot"]
     }
-  }
+  },
 
   // Uncomment to connect as an existing user other than the container default. More info: https://aka.ms/dev-containers-non-root.
   // "remoteUser": "devcontainer"
+
+  "runArgs": [
+    "--env", "DISPLAY=host.docker.internal:0"
+  ]
 }
